Update ENUM/Ports documentation with vulnerability examples
Added examples of XXE vulnerabilities and Uniscan usage.

--- a/ENUM/Ports/80,8080,443(HTTP,HTTPS).md
+++ b/ENUM/Ports/80,8080,443(HTTP,HTTPS).md
@@ -75,6 +75,8 @@
     - decode, change it, and recode
 - XXE
   - Reflected - comes from current HTTP request
+  - username still appears after test login
+    - `"><script>alert("test")</script><!--`
   - Stored - comes from websites database
   - DOM-based - comes from client side code rather than service-side code
 - Uniscan for LFI, RFI and RCE vulnerabilities
